--- a/angular.json
+++ b/angular.json
@@ -25,8 +25,9 @@
               }
             ],
             "styles": [
-              "src/styles.css"
-            ]
+  "node_modules/bootstrap/dist/css/bootstrap.min.css",
+  "src/styles.css"
+]
           },
           "configurations": {
             "production": {
@@ -67,6 +68,7 @@
         "test": {
           "builder": "@angular/build:unit-test"
         }
+        
       }
     }
   }
